<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_new_projet"

            android:title="@string/NEW_PROJECT" />
        <item
            android:id="@+id/nav_photo"

            android:title="@string/PHOTO" />
        <item
            android:id="@+id/nav_library"

            android:title="@string/LIBRARY" />
        <item
            android:id="@+id/nav_video"

            android:title="@string/PRESENT_VIDEO" />
        <item
            android:id="@+id/rate"

            android:title="@string/rate_this_app" />
        <item
            android:id="@+id/contact"

            android:title="@string/contact" />
    </group>


</menu>
