<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:background="#000000"
              tools:context=".fragment.LibraryFragment">

    <RelativeLayout
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:background="@drawable/rect_toolbar">

        <ImageView
                android:id="@+id/back"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:src="@drawable/ic_back"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/_5sdp"/>

        <TextView android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:textSize="@dimen/_15sdp"
                  android:text="@string/SHARE"
                  android:layout_marginTop="@dimen/_5sdp"
                  android:textColor="@color/white"
                  android:layout_centerInParent="true"
                  android:gravity="center"/>
    </RelativeLayout>


    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_margin="@dimen/_20sdp"
                  android:orientation="vertical">

        <Button android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:background="@drawable/rectangle_gradient_without_border"
                android:text="@string/instagram"/>
        <Button android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:background="@drawable/rectangle_gradient_without_border"
                android:text="@string/instafram_stories"
                android:layout_marginTop="@dimen/_20sdp"/>
        <Button android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:background="@drawable/rectangle_gradient_without_border"
                android:text="@string/email"
                android:layout_marginTop="@dimen/_20sdp"/>
        <Button android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:background="@drawable/rectangle_gradient_without_border"
                android:text="@string/message"
                android:layout_marginTop="@dimen/_20sdp"/>
        <Button android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:background="@drawable/rectangle_gradient_without_border"
                android:text="@string/whatsapp"
                android:layout_marginTop="@dimen/_20sdp"/>
        <Button android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:background="@drawable/rectangle_gradient_without_border"
                android:text="@string/app_lib"
                android:layout_marginTop="@dimen/_20sdp"/>
        <Button android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:background="@drawable/rectangle_gradient_without_border"
                android:text="@string/photo_lib"
                android:layout_marginTop="@dimen/_20sdp"/>

    </LinearLayout>

</LinearLayout>