<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/view"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/page_background">
    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginLeft="@dimen/_15sdp"
        android:layout_marginRight="@dimen/_15sdp"

        >
        <ImageView
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:src="@drawable/ic_menu"/>
        <ImageView
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:src="@drawable/ic_lock"
            android:layout_alignParentRight="true"/>

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">
        <RelativeLayout
            android:id="@+id/label"
            android:background="@drawable/circular_gradient"
            android:layout_width="@dimen/_170sdp"
            android:layout_height="@dimen/_170sdp">
            <TextView
                android:id="@+id/txtlabel1"
                android:text="@string/CIRCLE_LABEL"
                android:textStyle="bold"
                android:textSize="@dimen/_15sdp"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/_5sdp"
                android:gravity="center"
                android:layout_marginTop="@dimen/_35sdp"
                android:layout_centerHorizontal="true"
                android:paddingRight="@dimen/_5sdp"/>
            <TextView
                android:text="@string/CIRCLE_LABEL2"
                android:textStyle="bold"
                android:textSize="@dimen/_15sdp"
                android:textColor="@color/textcolor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/_5sdp"
                android:gravity="center"
                android:background="@color/white"
                android:layout_below="@+id/txtlabel1"
                android:layout_marginTop="@dimen/_35sdp"
                android:layout_centerHorizontal="true"
                android:paddingRight="@dimen/_5sdp"/>
        </RelativeLayout>
        <TextView
            android:text="@string/SKIP"
            android:textSize="@dimen/_15sdp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_centerInParent="true"
            android:textColor="@color/textcolor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/label"
            android:layout_marginTop="@dimen/_12sdp"
            />
    </RelativeLayout>


</RelativeLayout>